--- a/src/sqlite3/sqlite3.vcxproj.filters
+++ b/src/sqlite3/sqlite3.vcxproj.filters
@@ -2,90 +2,112 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <CudaCompile Include="program.cu" />
+    <CudaCompile Include="alter.cu" />
+    <CudaCompile Include="attach.cu" />
+    <CudaCompile Include="auth.cu" />
+    <CudaCompile Include="backup.cu" />
+    <CudaCompile Include="bitvec.cu" />
+    <CudaCompile Include="btmutex.cu" />
+    <CudaCompile Include="btree.cu" />
+    <CudaCompile Include="build.cu" />
+    <CudaCompile Include="callback.cu" />
+    <CudaCompile Include="whereexpr.cu" />
+    <CudaCompile Include="vdbemem.cu" />
+    <CudaCompile Include="vdbesort.cu" />
+    <CudaCompile Include="vdbetrace.cu" />
+    <CudaCompile Include="vtab.cu" />
+    <CudaCompile Include="wal.cu" />
+    <CudaCompile Include="walker.cu" />
+    <CudaCompile Include="where.cu" />
+    <CudaCompile Include="wherecode.cu" />
+    <CudaCompile Include="vdbeblob.cu" />
+    <CudaCompile Include="status.cu" />
+    <CudaCompile Include="table.cu" />
+    <CudaCompile Include="threads.cu" />
+    <CudaCompile Include="tokenize.cu" />
+    <CudaCompile Include="treeview.cu" />
+    <CudaCompile Include="trigger.cu" />
+    <CudaCompile Include="update.cu" />
+    <CudaCompile Include="utf.cu" />
+    <CudaCompile Include="util.cu" />
+    <CudaCompile Include="vacuum.cu" />
+    <CudaCompile Include="vdbe.cu" />
+    <CudaCompile Include="vdbeapi.cu" />
+    <CudaCompile Include="vdbeaux.cu" />
+    <CudaCompile Include="shell.cu" />
+    <CudaCompile Include="random.cu" />
+    <CudaCompile Include="resolve.cu" />
+    <CudaCompile Include="rowset.cu" />
+    <CudaCompile Include="select.cu" />
+    <CudaCompile Include="printf.cu" />
+    <CudaCompile Include="pcache.cu" />
+    <CudaCompile Include="pcache1.cu" />
+    <CudaCompile Include="pragma.cu" />
+    <CudaCompile Include="prepare.cu" />
+    <CudaCompile Include="pager.cu" />
+    <CudaCompile Include="os.cu" />
+    <CudaCompile Include="opcodes.cu" />
+    <CudaCompile Include="notify.cu" />
+    <CudaCompile Include="mutex_noop.cu" />
+    <CudaCompile Include="mutex.cu" />
+    <CudaCompile Include="loadext.cu" />
+    <CudaCompile Include="main.cu" />
+    <CudaCompile Include="malloc.cu" />
+    <CudaCompile Include="mem0.cu" />
+    <CudaCompile Include="mem1.cu" />
+    <CudaCompile Include="mem2.cu" />
+    <CudaCompile Include="mem3.cu" />
+    <CudaCompile Include="mem5.cu" />
+    <CudaCompile Include="memjournal.cu" />
+    <CudaCompile Include="legacy.cu" />
+    <CudaCompile Include="complete.cu" />
+    <CudaCompile Include="ctime.cu" />
+    <CudaCompile Include="date.cu" />
+    <CudaCompile Include="dbstat.cu" />
+    <CudaCompile Include="delete.cu" />
+    <CudaCompile Include="expr.cu" />
+    <CudaCompile Include="fault.cu" />
+    <CudaCompile Include="fkey.cu" />
+    <CudaCompile Include="func.cu" />
+    <CudaCompile Include="global.cu" />
+    <CudaCompile Include="hash.cu" />
+    <CudaCompile Include="insert.cu" />
+    <CudaCompile Include="json1.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libcu.h" />
     <ClInclude Include="sqliteInt.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="vdbeInt.h" />
+    <ClInclude Include="btree.h" />
+    <ClInclude Include="btreeInt.h" />
+    <ClInclude Include="hash.h" />
+    <ClInclude Include="keywordhash.h" />
+    <ClInclude Include="msvc.h" />
+    <ClInclude Include="mutex.h" />
+    <ClInclude Include="opcodes.h" />
+    <ClInclude Include="os.h" />
+    <ClInclude Include="os_common.h" />
+    <ClInclude Include="os_setup.h" />
+    <ClInclude Include="os_win.h" />
+    <ClInclude Include="pager.h" />
+    <ClInclude Include="parse.h" />
+    <ClInclude Include="pcache.h" />
+    <ClInclude Include="pragma.h" />
+    <ClInclude Include="rtree.h" />
+    <ClInclude Include="sqlite3ext.h" />
+    <ClInclude Include="sqliteLimit.h" />
+    <ClInclude Include="vdbe.h" />
+    <ClInclude Include="vxworks.h" />
+    <ClInclude Include="wal.h" />
+    <ClInclude Include="whereInt.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="alter.cpp" />
-    <ClCompile Include="analyze.cpp" />
-    <ClCompile Include="attach.cpp" />
-    <ClCompile Include="auth.cpp" />
-    <ClCompile Include="backup.cpp" />
-    <ClCompile Include="bitvec.cpp" />
-    <ClCompile Include="btmutex.cpp" />
-    <ClCompile Include="btree.cpp" />
-    <ClCompile Include="build.cpp" />
-    <ClCompile Include="callback.cpp" />
-    <ClCompile Include="complete.cpp" />
-    <ClCompile Include="ctime.cpp" />
-    <ClCompile Include="date.cpp" />
-    <ClCompile Include="dbstat.cpp" />
-    <ClCompile Include="delete.cpp" />
-    <ClCompile Include="expr.cpp" />
-    <ClCompile Include="fkey.cpp" />
-    <ClCompile Include="func.cpp" />
-    <ClCompile Include="global.cpp" />
-    <ClCompile Include="hash.cpp" />
-    <ClCompile Include="insert.cpp" />
-    <ClCompile Include="json1.cpp" />
-    <ClCompile Include="loadext.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="malloc.cpp" />
-    <ClCompile Include="mem0.cpp" />
-    <ClCompile Include="mem1.cpp" />
-    <ClCompile Include="mem2.cpp" />
-    <ClCompile Include="mem3.cpp" />
-    <ClCompile Include="mem5.cpp" />
-    <ClCompile Include="memjournal.cpp" />
-    <ClCompile Include="mutex.cpp" />
-    <ClCompile Include="mutex_noop.cpp" />
-    <ClCompile Include="notify.cpp" />
-    <ClCompile Include="opcodes.cpp" />
-    <ClCompile Include="os.cpp" />
-    <ClCompile Include="pager.cpp" />
-    <ClCompile Include="pcache.cpp" />
-    <ClCompile Include="pcache1.cpp" />
-    <ClCompile Include="pragma.cpp" />
-    <ClCompile Include="prepare.cpp" />
-    <ClCompile Include="printf.cpp" />
-    <ClCompile Include="random.cpp" />
-    <ClCompile Include="resolve.cpp" />
-    <ClCompile Include="rowset.cpp" />
-    <ClCompile Include="select.cpp" />
-    <ClCompile Include="mutex_w32.cpp" />
-    <ClCompile Include="mutex_unix.cpp" />
-    <ClCompile Include="os_win.cpp" />
-    <ClCompile Include="os_unix.cpp" />
     <ClCompile Include="parse.c" />
-    <ClCompile Include="shell.cpp" />
-    <ClCompile Include="status.cpp" />
-    <ClCompile Include="table.cpp" />
-    <ClCompile Include="threads.cpp" />
-    <ClCompile Include="tokenize.cpp" />
-    <ClCompile Include="treeview.cpp" />
-    <ClCompile Include="trigger.cpp" />
-    <ClCompile Include="update.cpp" />
-    <ClCompile Include="utf.cpp" />
-    <ClCompile Include="util.cpp" />
-    <ClCompile Include="vacuum.cpp" />
-    <ClCompile Include="vtab.cpp" />
-    <ClCompile Include="wal.cpp" />
-    <ClCompile Include="walker.cpp" />
-    <ClCompile Include="where.cpp" />
-    <ClCompile Include="wherecode.cpp" />
-    <ClCompile Include="whereexpr.cpp" />
-    <ClCompile Include="fault.cpp" />
-    <ClCompile Include="vdbe.cpp" />
-    <ClCompile Include="vdbeapi.cpp" />
-    <ClCompile Include="vdbeaux.cpp" />
-    <ClCompile Include="vdbeblob.cpp" />
-    <ClCompile Include="vdbemem.cpp" />
-    <ClCompile Include="vdbesort.cpp" />
-    <ClCompile Include="vdbetrace.cpp" />
-    <ClCompile Include="legacy.cpp" />
+    <ClCompile Include="analyze.cpp" />
+    <ClCompile Include="os_unix.c" />
+    <ClCompile Include="mutex_w32.c" />
+    <ClCompile Include="mutex_unix.c" />
+    <ClCompile Include="os_win.c" />
   </ItemGroup>
 </Project>
